# python-manim-sandbox-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MCP_CONFIGURATION.md  README.md  README_zh.md  demo_relative_imports.py  enhanced_artifact_manager.py  enhanced_repl.py  manim_usage_guide.md  playground.py  pyproject.toml  run_sandbox.py  test_direct_execution.py  test_enhanced_system.py  test_http_mcp.py  test_mcp_client.py  test_resource_manager.py  test_shell_execute.py  test_shell_simple.py  test_simple.py  warp-mcp-config.json
.github/workflows/: docker-build.yml
artifact_backups/post_ipython_backup_20250714_191706/manim_8f35fb11/: scene.py
artifact_backups/post_ipython_backup_20250714_191706/manim_8f35fb11/media/videos/scene/720p30/partial_movie_files/SquareToCircle/: partial_movie_file_list.txt
artifact_backups/test_backup_20250714_185501/manim_fea21845/: scene.py
artifact_backups/test_backup_20250714_185501/manim_fea21845/media/videos/scene/720p30/partial_movie_files/SquareToCircle/: partial_movie_file_list.txt
docs/: FAQ_AND_LIMITATIONS.md  changelog.md
src/sandbox/: __init__.py  mcp_sandbox_server.py  mcp_sandbox_server_stdio.py
src/sandbox/core/: execution_context.py  security.py
src/sandbox/sdk/: local_sandbox.py
test_artifact/: example.html
tests/: test_integration.py  test_simple_integration.py
