[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox"
version = "0.1.0"
description = "Python code execution sandbox with FastMCP server integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.5",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
]

[project.scripts]
sandbox-server = "sandbox.mcp_sandbox_server:main"
sandbox-server-stdio = "sandbox.mcp_sandbox_server_stdio:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
